--- a/single-repo.html
+++ b/single-repo.html
@@ -18,13 +18,17 @@
         Go Back
       </a>
     </div>
-    
+
   </header>
   
   <main>
-  
-  </main>
 
+    <div id="issues-container" class="list-group">
+
+    </div>
+    
+  </main>
+  <script src="./assets//js/single.js"></script>
 </body>
 
 </html>
